gatus/gatus-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gatus
  namespace: gatus
  labels:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/component: health-monitor
    app.kubernetes.io/managed-by: kubectl
spec:
  serviceName: gatus
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
      app.kubernetes.io/component: health-monitor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
        app.kubernetes.io/component: health-monitor
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: gatus
          image: twinproduction/gatus:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/gatus
            server: 192.168.86.107
