gatus/gatus-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
  labels:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/component: health-monitor
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.albinmedoc.se`)
      kind: Rule
      services:
        - name: gatus
          port: 8080
